--- a/src/index.njk
+++ b/src/index.njk
@@ -6,7 +6,7 @@ noJS: true
 {%- extends 'blank.njk' -%}
 
 {%- block content -%}
-  <div class="grid content-center w-full min-h-screen gap-4 place-items-center">
-    <a class="px-6 py-4 rounded bg-slate-100 hover:bg-blue-500 hover:text-white" href="produkt/">Produktsidemal</a>
+  <div class="grid items-start w-full gap-8 py-page px-edge">
+    <a class="py-6 pl-6 pr-12 text-lg rounded-xl bg-slate-100 hover:bg-blue-500 hover:text-white" href="produkt/">Produktsidemal</a>
   </div>
 {% endblock %}
