--- a/src/_includes/partials/fonts.njk
+++ b/src/_includes/partials/fonts.njk
@@ -21,6 +21,15 @@
   @font-face {
     font-family: 'Source Sans 3';
     font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url({{ '/assets/fonts/SourceSans3-normal-cyrillic.woff2' | htmlBaseUrl }}) format('woff2');
+    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+  }
+
+  @font-face {
+    font-family: 'Source Sans 3';
+    font-style: normal;
     font-weight: 600;
     font-display: swap;
     src: url({{ '/assets/fonts/SourceSans3-normal-cyrillic.woff2' | htmlBaseUrl }}) format('woff2');
