Støtte for testing av flere fonter

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -23,6 +23,7 @@
     <script src="/assets/alpine-intersect-plugin.min.js" type="text/javascript" defer></script>
     <script src="/assets/alpine.min.js" type="text/javascript" defer></script>
     {% endif %}
+    {%- block fonts -%}{%- endblock -%}
     {%- block script -%}{%- endblock -%}
   </head>
   <body
