--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -9,15 +9,18 @@ permalink: 'produkt/sykepenger/index.html'
 {%- from "macros/microcard.njk" import microcard -%}
 {%- from "macros/tile.njk" import tile -%}
 
+{% block fonts %}
+{% endblock %}
+
 {%- block content -%}
 
   {% set chapters = collections.all| onlyTags('sykepenger', 'innhold') %}
 
-  <main class="grid py-16 grid-cols-mini lg:grid-cols-maxi">
+  <main class="grid py-page grid-cols-mini lg:grid-cols-maxi">
     <div class="col-main lg:col-wide">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-      <h1 class="mt-1 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ intro | markdown | safe }}</div>
+      <h1 class="mt-1 font-bold text-5xl/tight text-balance">{{ title | safe }}</h1>
+      <div class="mt-6 text-lg text-pretty max-w-prose">{{ intro | markdown | safe }}</div>
 
       {# Audience #}
       {% if audience %}       
@@ -31,7 +34,7 @@ permalink: 'produkt/sykepenger/index.html'
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="z-10 mt-12 isolate">
+    <div class="z-10 mt-8 isolate">
       <h2 class="text-base font-semibold">Innhold på siden</h2>
       <ul class="grid gap-3 mt-2">
         {% for chapter in chapters.slice(0, -1) %}
@@ -50,7 +53,7 @@ permalink: 'produkt/sykepenger/index.html'
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
       <section class="grid grid-flow-row-dense pt-12 col-full grid-cols-mini lg:grid-cols-maxi" id="{{ chapter.data.title | slugify }}"  x-data="{ tocOpen: false }">
-        <div class=" col-main lg:col-wide">
+        <div class="col-wide">
           <div class="grid items-end pl-8 rounded-lg bg-slate-100 pt-2xl aspect-[2/1]">
             <span class="font-black -mb-9 text-white text-[20em]/[0.8]">{{ loop.index }}</span>
           </div>
@@ -94,7 +97,7 @@ permalink: 'produkt/sykepenger/index.html'
         {% endif %}
 
         {# Main Content #}
-        <div class="mt-2 prose col-main">
+        <div class="mt-8 prose col-main">
           {{ chapter.templateContent | markdown | safe }}
         </div>
       </section>
