--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,14 +1,14 @@
 {%- set audience = audienceOverride or menu.audience -%}
 
-<header class="relative z-50">
+<header class="relative z-50 ">
   <div class="text-sm tracking-widest text-center uppercase bg-white border-b border-slate-200 sm:hidden px-edge">
     <div class="py-1">
       {{ activeRole }}
     </div>
   </div>
 
-  <nav class="z-10 bg-white px-edge">
-    <div class="grid grid-cols-[auto_1fr] sm:grid-cols-[auto_auto_1fr] max-w-wide mx-auto">
+  <nav class="z-10 grid bg-white grid-cols-mini lg:grid-cols-maxi">
+    <div class="grid grid-cols-[auto_1fr] sm:grid-cols-[auto_auto_1fr] col-wide">
 
       {# Logo #}
       <div class="flex items-center py-5 sm:py-6">
