--- a/src/pages/produkt/pleiepenger/pleiepenger-c.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger-c.njk
@@ -1,6 +1,8 @@
 ---
 tags: ['produkt']
 variant: 'C'
+description: 'Stor og visuell innholdsmeny i grå bokser. Kapittelmeny er i hovedspalte på mobil og sidespalte (sticky) på desktop. Mulighet for å bytte kapittel er lagt inni bunnen av hver kapittelmeny.'
+
 permalink: 'produkt/pleiepenger/c/index.html'
 ---
 {%- extends 'base.njk' -%}
@@ -36,7 +38,7 @@ permalink: 'produkt/pleiepenger/c/index.html'
           <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
-          <p class="text-base text-pretty">{{ chapter.data.description | safe }}</p>
+          <p class="text-base text-pretty">{{ chapter.data.ingress | safe }}</p>
         </li>
         {% endfor %}
 
@@ -80,7 +82,7 @@ permalink: 'produkt/pleiepenger/c/index.html'
 
         {# Main Content #}
         <div class="mt-2 prose col-main">
-          <p>{{ chapter.data.description | safe }}</p>
+          <p>{{ chapter.data.ingress | safe }}</p>
 
           {{ chapter.templateContent | markdown | safe }}
         </div>
