--- a/src/pages/produkt/pleiepenger/pleiepenger-e.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger-e.njk
@@ -1,6 +1,7 @@
 ---
 tags: ['produkt']
 variant: 'E'
+description: 'Enkel innholdsmeny uten ingresser. Kapittelmeny i hovedspalte på mobil og sidespalte (sticky) på desktop. Mulighet for å bytte kapittel er lagt i bunnen av hver kapittelmeny.'
 permalink: 'produkt/pleiepenger/e/index.html'
 ---
 {%- extends 'base.njk' -%}
@@ -92,7 +93,7 @@ permalink: 'produkt/pleiepenger/e/index.html'
 
         {# Main Content #}
         <div class="mt-2 prose col-main">
-          <p>{{ chapter.data.description | safe }}</p>
+          <p>{{ chapter.data.ingress | safe }}</p>
 
           {{ chapter.templateContent | markdown | safe }}
         </div>
