--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -6,19 +6,24 @@ noJS: true
 {%- extends 'blank.njk' -%}
 
 {% macro link(item) %}
-  <a class="flex justify-between py-6 pl-6 pr-12 text-lg rounded bg-slate-100 hover:bg-blue-500 hover:text-white" href="{{ item.url }}">
-    {{ item.data.title }}
-    {% if item.data.variant %}
-      <b>{{ item.data.variant }}</b>
-    {% endif %} 
-  </a> 
+  <div class="relative grid gap-1 py-6 pl-6 pr-8 text-lg rounded bg-slate-100 overflow-clip has-[a:hover]:bg-blue-500 has-[a:hover]:text-white">
+    <a class="font-semibold text-blue-600 after:absolute hover:text-white after:z-10 after:inset-0" href="{{ item.url }}">
+      {{ item.data.title }}
+      {% if item.data.variant %}       
+      <span class="italic font-normal">({{ item.data.variant }})</span>
+      {% endif %}
+    </a>     
+    {% if item.data.description %}      
+      <p class="text-base text-pretty max-w-prose opacity-85">{{ item.data.description | safe }}</p>
+    {% endif %}
+  </div> 
 {% endmacro %}
 
 
 {% set pages = ['pleiepenger', 'sykepenger', 'alderspensjon'] %}
 
 {%- block content -%}
-  <div class="grid items-start w-full gap-8 py-page px-edge">
+  <div class="grid items-start w-full max-w-screen-md gap-8 mx-auto py-page px-edge">
     {% for item in pages %}
       <div class="grid flex-1 gap-1 rounded-xl overflow-clip">
         {% for item in collections.all | onlyTags('produkt', item) %}
