--- a/src/_includes/partials/fonts.njk
+++ b/src/_includes/partials/fonts.njk
@@ -1,42 +1,38 @@
 <style>
-  /* cyrillic */
   @font-face {
-    font-family: 'Source Sans 3';
-    font-style: italic;
-    font-weight: 375;
+    font-family: "Source Serif 4";
+    font-weight: 400;
+    font-style: normal;
     font-display: swap;
-    src: url({{ '/assets/fonts/SourceSans3-normal-cyrillic.woff2' | htmlBaseUrl }}) format('woff2');
-    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+    src: url("{{ '/assets/fonts/SourceSerif4-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
+      U+2215, U+FEFF, U+FFFD;
   }
 
   @font-face {
-    font-family: 'Source Sans 3';
-    font-style: normal;
-    font-weight: 375;
-    font-display: swap;
-    src: url({{ '/assets/fonts/SourceSans3-normal-cyrillic.woff2' | htmlBaseUrl }}) format('woff2');
-    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-  }
-
-  @font-face {
-    font-family: 'Source Sans 3';
-    font-style: normal;
-    font-weight: 500;
-    font-display: swap;
-    src: url({{ '/assets/fonts/SourceSans3-normal-cyrillic.woff2' | htmlBaseUrl }}) format('woff2');
-    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-  }
-
-  @font-face {
-    font-family: 'Source Sans 3';
-    font-style: normal;
+    font-family: "Source Serif 4";
     font-weight: 600;
+    font-style: italic;
     font-display: swap;
-    src: url({{ '/assets/fonts/SourceSans3-normal-cyrillic.woff2' | htmlBaseUrl }}) format('woff2');
-    unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+    src: url("{{ '/assets/fonts/SourceSerif4-italic-latin.woff2' | htmlBaseUrl }}") format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
+      U+2215, U+FEFF, U+FFFD;
   }
 
-  /* latin */
+  @font-face {
+    font-family: "Source Serif 4";
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+    src: url("{{ '/assets/fonts/SourceSerif4-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+      U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212,
+      U+2215, U+FEFF, U+FFFD;
+  }
+
+
   @font-face {
     font-family: "Source Sans 3";
     font-weight: 375;
@@ -61,7 +57,7 @@
 
   @font-face {
     font-family: "Source Sans 3";
-    font-weight: 500;
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
     src: url("{{ '/assets/fonts/SourceSans3-normal-latin.woff2' | htmlBaseUrl }}") format("woff2");
