--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -115,6 +115,7 @@
   .accordion {
     display: grid;
     padding-inline: 36px 10px;
+    font-family: theme(fontFamily.sans);
   }
   .accordion + .accordion {
     margin-block-start: 0;
@@ -127,16 +128,17 @@
     appearance: none;
     display: block;
     list-style: none;
-    padding: 0.75em 40px;
+    padding: 0.75em 44px;
     margin-block: -1px;
-    margin-inline: -40px -12px;
+    margin-inline: -48px -20px;
     border-radius: 4px;
     cursor: pointer;
     text-align: left;
     text-indent: -30px;
     text-wrap: pretty;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1.375;
+    text-size: theme(fontSize.lg);
     color: theme(colors.blue.600);
   }
   :where(.accordion) summary::-webkit-details-marker {
@@ -150,8 +152,8 @@
     background-color: theme(colors.blue.50);
   }
   :where(.accordion) summary:before {
-    background-color: theme(colors.blue.500);
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='#fff' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
+    background-color: theme(colors.blue.50);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgba(0, 86, 180, 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
     background-position: center;
     background-repeat: no-repeat;
     content: "";
@@ -159,16 +161,17 @@
     flex-shrink: 0;
     place-items: center;
     translate: 0 4px;
-    margin-inline-end: 8px;
+    margin-inline-end: 10px;
     border-radius: 8px;
     transition: rotate 150ms;
-    width: 20px;
-    height: 20px;
+    width: 22px;
+    height: 22px;
   }
   :where(.accordion) summary:hover:before {
-    background-color: theme(colors.blue.600);
+    background-color: theme(colors.white);
   }
   :where(.accordion[open]) summary:before {
+    background-color: theme(colors.white);
     rotate: -180deg;
   }
   :where(.accordion) summary > * {
@@ -298,8 +301,8 @@
     grid-template-columns: 
       [full-start] var(--_edge) minmax(0, 1fr)  
       [wide-start main-start] min(clamp(30rem, 18rem + 24vi, 42rem), 100%) 
-      [main-end] clamp(1rem, -6rem + 14vi, 8rem) 
-      [side-start] minmax(0, 25rem) 
+      [main-end] clamp(1rem, -1.2353rem + 11.1765vi, 10.5rem) 
+      [side-start] minmax(0, 22.5rem) 
       [side-end wide-end] minmax(0, 1fr) var(--_edge) [full-end];
   }
   :where(.grid-cols-mini > *, .grid-cols-maxi > *) { grid-column: main }
