--- a/src/pages/produkt/pleiepenger/pleiepenger-a.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger-a.njk
@@ -1,7 +1,7 @@
 ---
 tags: ['produkt']
 variant: 'A'
-description: 'Innholdsmeny i grå boks. Kapittelmeny er alltid i hovedspalte, men dukker også opp i sidespalte (sticky) på desktop når bruker scroller forbi den i hovedspalten'
+description: 'Enkel innholdsmeny i grå bokser. Kapittelmeny er alltid i hovedspalte, men dukker også opp i sidespalte (sticky) på desktop når bruker scroller forbi den i hovedspalten'
 permalink: 'produkt/pleiepenger/a/index.html'
 ---
 {%- extends 'base.njk' -%}
@@ -18,7 +18,7 @@ permalink: 'produkt/pleiepenger/a/index.html'
     <div class="col-main lg:col-wide">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
       <h1 class="mt-1 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ intro | markdown | safe }}</div>
+      <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
 
       {# Audience #}
       <div class="mt-6 -ml-1">
