--- a/src/pages/produkt/pleiepenger/pleiepenger-b.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger-b.njk
@@ -18,7 +18,7 @@ permalink: 'produkt/pleiepenger/b/index.html'
     <div class="col-main lg:col-wide">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
       <h1 class="mt-1 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ intro | markdown | safe }}</div>
+      <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
 
       {# Audience #}
       <div class="mt-6 -ml-1">
