--- a/src/pages/produkt/pleiepenger/pleiepenger-d.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger-d.njk
@@ -27,7 +27,7 @@ permalink: 'produkt/pleiepenger/d/index.html'
       </div>
 
       {# Intro #}
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ intro | markdown | safe }}</div>
+      <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
 
     </div>
 
