--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -51,7 +51,7 @@ permalink: 'produkt/sykepenger/index.html'
     <div class="col-main lg:col-wide">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
       <h1 class="mt-1 font-bold text-5xl/tight text-balance">{{ title | safe }}</h1>
-      <p class="mt-6 font-serif text-lg text-pretty max-w-prose">{{ intro | safe }}</p>
+      <p class="mt-6 font-serif text-lg text-pretty max-w-prose">{{ ingress | safe }}</p>
 
       {# Audience #}
       {% if audience %}       
