--- a/src/pages/produkt/alderspensjon/alderspensjon.njk
+++ b/src/pages/produkt/alderspensjon/alderspensjon.njk
@@ -15,13 +15,13 @@ permalink: 'produkt/alderspensjon/index.html'
 
 {%- block content -%}
 
-  {% set chapters = collections.all| onlyTags('alderspensjon', 'innhold') %}
+  {% set chapters = collections.all | onlyTags('alderspensjon', 'innhold') %}
 
   <main class="grid py-16 grid-cols-mini lg:grid-cols-maxi">
     <div class="col-main lg:col-wide">
       <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
       <h1 class="mt-1 font-bold text-4xl/tight text-balance ">{{ title | safe }}</h1>
-      <div class="mt-8 text-lg text-pretty max-w-prose">{{ intro | markdown | safe }}</div>
+      <div class="mt-8 text-lg text-pretty max-w-prose">{{ ingress | markdown | safe }}</div>
 
       {# Audience #}
       {% if audience %}       
