Rettet feil i beskrivelse av varianter

--- a/src/pages/produkt/pleiepenger/pleiepenger-b.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger-b.njk
@@ -1,7 +1,7 @@
 ---
 tags: ['produkt']
 variant: 'B'
-description: 'Bokinspirert innholdsfortegnelse på toppen. Kapittel-meny i hovedspalte på mobil og sidespalte (sticky) på desktop.'
+description: 'Bokinspirert innholdsfortegnelse på toppen. Kapittel-meny i hovedspalte på mobil og sidespalte (sticky) på desktop. Mulighet for å bytte kapittel er lagt inni bunnen av hver kapittelmeny.'
 permalink: 'produkt/pleiepenger/b/index.html'
 ---
 {%- extends 'base.njk' -%}
