--- a/src/pages/produkt/pleiepenger/pleiepenger-c.njk
+++ b/src/pages/produkt/pleiepenger/pleiepenger-c.njk
@@ -1,7 +1,7 @@
 ---
 tags: ['produkt']
 variant: 'C'
-description: 'Stor og visuell innholdsmeny i grå bokser. Kapittelmeny er i hovedspalte på mobil og sidespalte (sticky) på desktop. Mulighet for å bytte kapittel er lagt inni bunnen av hver kapittelmeny.'
+description: 'Stor og visuell innholdsmeny i grå bokser. Kapittelmeny er i hovedspalte på mobil og sidespalte (sticky) på desktop.'
 
 permalink: 'produkt/pleiepenger/c/index.html'
 ---
