--- a/src/index.njk
+++ b/src/index.njk
@@ -1,12 +1,38 @@
 ---
 title: 'Index'
-description: ''
 noJS: true
 ---
 {%- extends 'blank.njk' -%}
 
+{% set pages = [
+  {
+    title: 'Områdeside',
+    description: 'Listeside (helse og sykdom) med inngang til situasjoner som tilhører området.',
+    url: 'omrade'
+  },
+  {
+    title: 'Produktside',
+    description: 'Kjerneside med all informasjon om en ytelse, tjeneste eller et hjelpemiddel.',
+    url: 'produkt'
+  }
+] %}
+
+{% macro link(item) %}
+  <div class="relative grid gap-1 py-6 pl-6 pr-8 text-lg rounded bg-slate-100 overflow-clip has-[a:hover]:bg-blue-500 has-[a:hover]:text-white">
+    <a class="font-semibold text-blue-600 after:absolute hover:text-white after:z-10 after:inset-0" href="/{{ item.url }}/">
+      {{ item.title }}
+    </a>     
+    {% if item.description %}      
+      <p class="text-base text-pretty max-w-prose opacity-85">{{ item.description | safe }}</p>
+    {% endif %}
+  </div> 
+{% endmacro %}
+
+
 {%- block content -%}
-  <div class="grid items-start w-full gap-8 py-page px-edge">
-    <a class="py-6 pl-6 pr-12 text-lg rounded-xl bg-slate-100 hover:bg-blue-500 hover:text-white" href="produkt/">Produktsidemal</a>
+  <div class="grid items-start w-full max-w-screen-md gap-2 mx-auto py-page px-edge">
+    {% for item in pages %}      
+    {{ link(item) }}
+    {% endfor %}
   </div>
 {% endblock %}
