--- a/src/pages/omrade/omrade.njk
+++ b/src/pages/omrade/omrade.njk
@@ -8,21 +8,21 @@ alpine: true
 
 {%- block content -%}
   <main class="bg-slate-100">
-    <div class="grid pt-12 bg-white grid-cols-mini lg:grid-cols-maxi">
+    <div class="grid pt-12 bg-white grid-cols-mini lg:grid-cols-maxi ">
       <div class="relative col-wide">
-        {{ '/src/_includes/svg/area-illustrations/helse.svg' | svgContents('h-auto min-w-32 ml-auto w-1/3 xs:w-auto float-right xs:absolute xs:bottom-0 xs:right-0') | safe }}
+        {{ '/src/_includes/svg/area-illustrations/helse.svg' | svgContents('h-auto min-w-32 mt-5 ml-auto w-1/3 xs:w-auto float-right xs:absolute xs:bottom-0 xs:right-0') | safe }}
         <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
         <h1 class="mt-0.5 -translate-x-[0.0625em] font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
-        <h2 class="col-span-2 col-start-1 mt-6 mb-8 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
+        <h2 class="col-span-2 col-start-1 mt-2 mb-8 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
       </div>
     </div>
     <div class="grid grid-flow-row-dense pt-12 pb-24 grid-cols-mini lg:grid-cols-maxi">
-      <div class="col-wide lg:col-side">[spesielle elementer]</div>
+      <div class="mb-12 col-wide lg:col-side">[spesielle elementer]</div>
       <div class="col-wide lg:col-main">
-        <ul class="grid divide-y divide-slate-300">
+        <ul class="grid gap-8">
           {%- for item in situationList -%}
             <li class="relative flex flex-col">
-              <div class="flex items-center justify-between flex-1 py-8 gap-x-16">
+              <div class="flex items-center justify-between flex-1 gap-x-16">
                 <div class="flex-col justify-start">
                   <h3 class="text-lg font-bold leading-snug">
                     <a class="text-blue-600 underline text-balance hover:text-blue-500 hover:no-underline after:absolute after:inset-0" href="#">{{ item.title | safe }}</a>
@@ -33,6 +33,9 @@ alpine: true
                 {{ item.icon | svgContents('shrink-0 w-16 aspect-square h-auto') | safe if item.icon }}
               </div>
             </li>
+            {% if not loop.last %}             
+            <li class="border-t border-slate-300" aria-hidden="true"></li>
+            {% endif %}
           {%- endfor -%}
         </ul>
       </div>
