--- a/src/pages/omrade/omrade.njk
+++ b/src/pages/omrade/omrade.njk
@@ -1,44 +1,35 @@
 ---
-title: 'Helse og sykdom'
-description: ''
-type: 'Område'
-alpine: true
+title: 'Områdesidemal'
 ---
-{%- extends 'base.njk' -%}
+{%- extends 'blank.njk' -%}
+
+{% macro link(item) %}
+  <div class="relative grid gap-1 py-6 pl-6 pr-8 text-lg rounded bg-slate-100 overflow-clip has-[a:hover]:bg-blue-500 has-[a:hover]:text-white">
+    <a class="font-semibold text-blue-600 after:absolute hover:text-white after:z-10 after:inset-0" href="{{ item.url }}">
+      {{ item.data.title }}
+      {% if item.data.variant %}       
+      <span class="italic font-normal">({{ item.data.variant }})</span>
+      {% endif %}
+    </a>     
+    {% if item.data.description %}      
+      <p class="text-base text-pretty max-w-prose opacity-85">{{ item.data.description | safe }}</p>
+    {% endif %}
+  </div> 
+{% endmacro %}
 
 {%- block content -%}
-  <main class="bg-slate-100">
-    <div class="grid pt-12 bg-white grid-cols-mini lg:grid-cols-maxi ">
-      <div class="relative col-wide">
-        {{ '/src/_includes/svg/area-illustrations/helse.svg' | svgContents('h-auto min-w-32 mt-5 ml-auto w-1/3 xs:w-auto float-right xs:absolute xs:bottom-0 xs:right-0') | safe }}
-        <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-        <h1 class="mt-0.5 -translate-x-[0.0625em] font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
-        <h2 class="col-span-2 col-start-1 mt-2 mb-8 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
+  <div class="py-page px-edge">
+    <a class="inline-flex items-center gap-1 px-3 py-2 mb-4 -mx-3 font-semibold text-blue-600 hover:underline" href="../">
+      {{ '/src/_includes/svg/icons/chevron-left.svg' | svgContents('') | safe }}
+      <span>Tilbake</span>
+    </a>
+
+    <div class="grid items-start w-full max-w-screen-md gap-8 mx-auto">
+      <div class="grid flex-1 gap-1 rounded-xl overflow-clip">
+      {% for item in collections.all | onlyTags('omrade', 'listeside') %}
+        {{ link(item) }}        
+      {% endfor %}
       </div>
     </div>
-    <div class="grid grid-flow-row-dense pt-12 pb-24 grid-cols-mini lg:grid-cols-maxi">
-      <div class="mb-12 col-wide lg:col-side">[spesielle elementer]</div>
-      <div class="col-wide lg:col-main">
-        <ul class="grid gap-8">
-          {%- for item in situationList -%}
-            <li class="relative flex flex-col">
-              <div class="flex items-center justify-between flex-1 gap-x-16">
-                <div class="flex-col justify-start">
-                  <h3 class="text-lg font-bold leading-snug">
-                    <a class="text-blue-600 underline text-balance hover:text-blue-500 hover:no-underline after:absolute after:inset-0" href="#">{{ item.title | safe }}</a>
-                  </h3>
-                  <p>{{ item.description | safe }}</p>
-                  {# <p class="pt-8 mt-auto text-sm tracking-widest uppercase text-balance">{{ item.category }}</p> #}
-                </div>
-                {{ item.icon | svgContents('shrink-0 w-16 aspect-square h-auto') | safe if item.icon }}
-              </div>
-            </li>
-            {% if not loop.last %}             
-            <li class="border-t border-slate-300" aria-hidden="true"></li>
-            {% endif %}
-          {%- endfor -%}
-        </ul>
-      </div>
-    </div>
-  </main>
-{%- endblock -%}
+  </div>
+{% endblock %}
